# freeode

./: .gitignore  README.rst
doc/: Automatic Differentiation ADOL-C.desktop  Local-curve-fitting.desktop  biofilm.py  high-performance_Linux_cluster.desktop  http:%2f%2fen.wikibooks.org%2fwiki%2fCompiler_Construction.desktop  http:%2f%2fspirit.sourceforge.net%2fdistrib%2fspirit_1_8_3%2flibs%2fspirit%2findex.html.desktop  http:%2f%2fwww-sul.stanford.edu%2fdepts%2feng%2fhighlights%2fEE%2f383.html.desktop  http:%2f%2fwww.ginac.de%2f.desktop  python_storage_lib_for_science.desktop  reactor1.py
doc/other_languages/: Camlp4 - Language to Extend Ocaml.desktop  OpenModelica.desktop  The D language - very interesting templates.desktop
docs-ideas/: http:%2f%2fpyparsing.sourceforge.net%2f.desktop  http:%2f%2fwww.hpl.hp.com%2fpersonal%2fHans_Boehm%2fgc%2f.desktop  http:%2f%2fwww.servocomm.freeserve.co.uk%2fCpp%2fphysical_quantity%2findex.html.desktop
docs-ideas/libraries/: PyDSTool - Python Simulation Package.desktop  python_symbolic_maths.html
docs-ideas/other_languages/: JavaScript (intro).desktop  gproms-syntax.txt
docs-ideas/pde/: Finite Pointset Method - Wikipedia.desktop  Moving Particle Semi Implicit - Wikipedia.desktop  Partition of Unity - Wikipedia.desktop  reactor1.py
docs-siml/intro/: Makefile  built-in-library.rst  conf.py  fermenter-intro.rst  index.rst  make.bat  syntax.rst  test_wesite.sh
freeode_cpp/: AUTHORS  Doxyfile  Makefile.in  README  README.rst  TODO  acinclude.m4  configure  configure.in  configure.in.in  sim_lang.e3p  sim_lang.e3s  sim_lang.e3t  sim_lang.kdevelop  sim_lang.kdevelop.pcs  sim_lang.kdevses  sim_lang.tag
freeode_cpp/admin/: acinclude.m4.in
freeode_cpp/doc/: Makefile.am  Makefile.in  http:%2f%2fwww.cats.rwth-aachen.de%2fteaching%2fpara.desktop
freeode_cpp/po/: Makefile.in
freeode_cpp/src/: Makefile.am  Makefile.in  hl_siml.xml  install_hl  main.cpp  parser.cpp  parser.h  py2c_string.py  py_simltest.e3p  pygenmain.cpp  pymain.py  reactor1.py  sim_lang.desktop  sim_lang.lsm  sim_langui.rc  siml_cmerror.cpp  siml_cmerror.h  siml_cmformula.cpp  siml_cmformula.h  siml_cmmemaccess.cpp  siml_cmmemaccess.h  siml_cmmodelintermediate.cpp  siml_cmmodelintermediate.h  siml_cmpath.cpp  siml_cmpath.h  siml_code_model.cpp  siml_code_model.h  siml_code_transformations.cpp  siml_code_transformations.h  siml_error_generator.cpp  siml_error_generator.h  siml_globaldef.h  siml_model_grammar.h  siml_name_grammar.h  siml_ps_equation.h  siml_ps_formula.h  siml_ps_main_object.cpp  siml_ps_main_object.h  siml_ps_mem_access.h  siml_ps_memory_definition.h  (+20 more)
freeode_cpp/templates/: cpp
freeode_py/: MANIFEST.in  README  README-TESTS  README-TESTS.rst  README.rst  SIML Compiler Outline.odp  SimlParser.py  The SIML Language.odt  ast.py  bioreactor_simple.siml  competition.siml  competition_parameter_variation1.py  competition_phase_diagrams.py  compile-all-models  compilermain.py  fourFn.py  freeode.py  hl_install  hl_siml.xml  predator_prey.siml  pygenerator.py  run-all-tests  run_test_py.py  setup.py  simlc  simlc.py  simlcompiler.py  simlparser.py  simulatorbase.py  tank.siml  test_models_1.py  test_models_2.py  test_models_other.py  test_script.py  tuned_abs_damper.siml
freeode_py/examples/: fourFn.py
freeode_py/experiments/: change_program_text.py  example_dot_operator.py  example_flyweight_pattern.py  example_operatorPrecedence.py  example_parse_stop.py  example_unicode_parsing.py  framestack_inspect.py  indent_scanner.py  metaclass_print.py  new_interpreter_object.py  pass_parameters_to_dynamic_function.py  quicksort.py  simple_config_lang.py
freeode_py/freeode/: ast.py  example_flyweight_pattern.py  example_resultsname_bug.py  intermediate.py  interpreter.py  optimizer.py  pygenerator.py  simlcompiler.py  simlparser.py  simlstdlib.py  simulatorbase.py  storage.py  test_1_interpreter.py  test_2_interpreter.py  test_3_interpreter_errors.py  test_ast.py  test_dot_operator.py  test_indented_block.py  test_indented_block1.py  test_interpreter.py  test_node.py  test_operatorPrecedence.py  test_operatorPrecedence_power.py  test_optimizer.py  test_optimizer_errors.py  test_parse_stop.py  test_pygenerator.py  test_simlcompiler.py  test_simlparser.py  test_util.py  units.py  units_doc.py  util.py  zold_intermediate.py  zold_simlstdlib.py
freeode_py/hacker-doc/: Veusz - Data Viewer - Data Visualization Library .desktop
freeode_py/templates/: expat.py  gpl.py  lgpl.py
models/: bioreactor.siml  bioreactor1.siml  bioreactor_main.py  pymain.py  sim_main.py  sim_project.e3p  test.siml
website/: development.html  development.php  examples.html  examples.php  footer.html  freeode.css  freeode.webprj  header.html  index.html  index.php  installation.html  installation.php  language.html  language.php  links.html  links.php  make-all-website  menu-left.html  models  siml-intro  usage.html  usage.php
(+105 files in other folders)
